Changing countdown and fixation to be same size as buttons on mobile

--- a/src/css/game.css
+++ b/src/css/game.css
@@ -384,7 +384,24 @@ p  {
 .lexicality-trial-arrows {
 	background-color: transparent;
 	border: transparent;
+	padding: 0;
 }
 
+.countdown-arrows {
+	background-color: transparent;
+	border: transparent;
+	margin-left: 5rem;
+	margin-right: 5rem;
+}
 
+#countdown-wrapper {
+	position: fixed;	
+	bottom: 20%;
+	width: 100%;
+}
+
+#countdown-arrows-wrapper {
+	display: flex;
+	justify-content: center;
+}
 
